--- a/src/weather.css
+++ b/src/weather.css
@@ -24,9 +24,9 @@ body {
     padding: .7rem 1.5rem;
     font-size: 1.2rem;
     border-radius: 25px;
-    border: 1px solid rgba(255, 255, 255, 0.8);
+    border: 2px solid rgba(0, 0, 0, 0.8);
     background: rgba(255, 255, 255, 0.1);
-    color: #f8f8f8;
+    color: rgba(0, 0, 0, 0.8);
   }
   
 ::placeholder {
@@ -69,6 +69,14 @@ body {
     margin-top: 20%;
 
 }
+
+.description {
+    color: #f8f8f8;
+    position: relative;
+    right: -90%;
+    transform-origin: 0 0;
+    transform: rotate(269deg);
+  }
 
 /* input {
     background-color: #607D8B;
@@ -126,8 +134,8 @@ input:focus {
     background-color: #B0BEC5;
 }
 
-/* @media screen and (max-width: 500px) {
+@media screen and (max-width: 500px) {
     .card1 {
         padding-left: 26px;
     }
-} */
+}
